# Animated_LED

./: .env.example  .gitignore  CLAUDE.md  Hardware_setup.md  README.md  TODO  cpu_optimization_options.md  effect_refactor_plan.html  implementation_roadmap.md  pyproject.toml  reach_the_pi.md  refactor_LED_control_surface.md  surface_v2_design_plan.md  user_design_spec.md
.obsidian/: workspace.json
LED_color_debug/: BLOCKY_COLORS_INVESTIGATION.md  index.html  index_v2.html  index_v3.html
config/: config.dev.yaml  config.dev.yaml.bak  config.pi.yaml  playlist.yaml
config/presets/: chill.yaml  color_waves.yaml  cooldown.yaml  default.yaml  gentle_whiteblue_waves.yaml  peak.yaml  purple_comet_clockwise.yaml  red_blue_many_base.yaml  red_waves_blue_base.yaml  red_waves_blue_kicks.yaml  snare_sparkles.yaml  soft_purple_blue_wave.yaml  splitting_comets_outwards.yaml  sunset_breathing.yaml
deploy/: gledopto-reboot.service  ledctl.service  net-watchdog.service  net-watchdog.sh  wled-proxy.service  wled-proxy.socket
docs/: effect_refactor_plan.md  surface_v2_design_plan.md  surface_v2_phased_plan.md
scripts/: calibrate.py
src/ledctl/: cli.py  config.py  engine.py  masters.py  mixer.py  pixelbuffer.py  playlist.py  presets.py  surface.py  topology.py
src/ledctl/agent/: __init__.py  client.py  session.py  system_prompt.py  tool.py
src/ledctl/api/: agent.py  auth.py  server.py
src/ledctl/audio/: __init__.py  analyser.py  bridge.py  capture.py  cleaner.py  features.py  normalizer.py  source.py  state.py
src/ledctl/effects/: __init__.py  _color.py  base.py  modulator.py  palette.py  registry.py  (+1 more)
src/web/: audio-meter.js  audio.html  editor.html  index-mobile.html  index.html  manifest.webmanifest  mobile.html  sw.js
state/: aiXander_weather_data.json
summaries/: aiXander_weather_data.md
tests/: test_agent.py  test_api.py  test_audio_analyser.py  test_audio_api.py  test_audio_bridge.py  test_audio_cleaner.py  test_audio_features.py  test_audio_normalizer.py  test_auth.py  test_config.py  test_ddp.py  test_diagnostics.py  test_e2e_pipeline.py  test_effects.py  test_examples.py  test_hardening.py  test_helpers.py  test_mixer.py  test_persistence.py  test_pixelbuffer.py  test_prompt_isolation.py  test_runtime.py  test_sandbox.py  test_surface_primitives.py  test_topology.py  test_wave_effect.py
(+64 files in other folders)
