[project]
name = "ledctl"
version = "0.1.0"
description = "Audio-reactive LED installation controller"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pyyaml>=6.0",
    "numpy>=2.0",
    "python-osc>=1.8",
    "openai>=1.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "httpx>=0.27",
]

[project.scripts]
ledctl = "ledctl.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ledctl"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Example effects are loaded into the LLM sandbox where np/Effect/hex_to_rgb/etc.
# are injected as module globals — ruff can't see those, so silence the
# inevitable F821s and let the docstring/comment hyphens overrun line length.
"src/ledctl/surface/examples/**/effect.py" = ["F821", "E501"]
# `surface/prompt.py` embeds example effect source strings for the LLM that
# do the same thing.
"src/ledctl/surface/prompt.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
